--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["esnext"],
+    "lib": ["dom", "esnext"],
     "module": "commonjs",
-    "outDir": "./dist",
+    "outDir": "./build",
     "target": "es6",
 
     "allowJs": true,
@@ -26,5 +26,5 @@
     "typeRoots": ["node_modules/@types"]
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*"]
+  "include": ["./src/main/**/*", "./src/test/**/*"]
 }
